--- a/notebooks/01-la-eda.ipynb
+++ b/notebooks/01-la-eda.ipynb
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b8d8427",
+   "id": "2d1a1ba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97676717",
+   "id": "3aae18c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,17 +269,9 @@
    "outputs": [],
    "source": [
     "# manual testing of determine_game_score\n",
-    "print(determine_game_score_from_points('11-8, 7-11, 11-9, 12-10'))\n",
-    "print(determine_game_score_from_points('1-11, 11-3, 11-9'))"
+    "print(determine_game_score_from_points(\"11-8, 7-11, 11-9, 12-10\"))\n",
+    "print(determine_game_score_from_points(\"1-11, 11-3, 11-9\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c1349f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
