create process_results_column function

--- a/notebooks/01-la-eda.ipynb
+++ b/notebooks/01-la-eda.ipynb
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d1a1ba0",
+   "id": "9541b336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,11 +189,10 @@
     "        # then result is of the form \"2/i\" or \"2/i (15m)\" where i=0,1\n",
     "        return \"2/\"\n",
     "\n",
-    "    # trying to get pattern that matches '11-3, 4-11, 11-9 (44m)'\n",
+    "    # pattern should match '11-3, 4-11, 11-9 (44m)'\n",
     "    pat = r\"(?P<points>[\\d, -]+\\d)(?: \\((?P<time>\\d+)m\\))?\"\n",
-    "    match = re.match(pat, result)\n",
-    "    if match:\n",
-    "        return match.group(\"points\")\n",
+    "    if re.match(pat, result):\n",
+    "        return \"points\"\n",
     "\n",
     "    # if none of the above conditions were met, then\n",
     "    # want to see what it is\n",
@@ -204,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aae18c0",
+   "id": "3c46a2ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,6 +271,88 @@
     "print(determine_game_score_from_points(\"11-8, 7-11, 11-9, 12-10\"))\n",
     "print(determine_game_score_from_points(\"1-11, 11-3, 11-9\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8a2794e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_results_column(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Process raw results column to get games won by winner and loser\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "        dataframe containing a column 'result'\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    pd.DataFrame\n",
+    "        New dataframe that is copy of the original but with two\n",
+    "        additional columns, for the number of games won by\n",
+    "        the winner and loser respectively. \n",
+    "    \"\"\"\n",
+    "    df_copy = df.copy()\n",
+    "    \n",
+    "    games_winner = []\n",
+    "    games_loser = []\n",
+    "    results = df_copy.result.to_list()\n",
+    "\n",
+    "    for result in tqdm(results):\n",
+    "        result_type = determine_result_type(result)\n",
+    "        \n",
+    "        if result_type in ['bye', 'wo', 'ret', 'unknown', 'other']:\n",
+    "            games_winner.append(np.nan)\n",
+    "            games_loser.append(np.nan)\n",
+    "        \n",
+    "        elif result_type in ['3/', '2/']:\n",
+    "            # then result is of the form \"3/i ...\" or \"2/i ...\"\n",
+    "            games_winner.append(int(result[0]))\n",
+    "            games_loser.append(int(result[2]))\n",
+    "        \n",
+    "        elif result_type == 'points':\n",
+    "            # we presume results is of standard form\n",
+    "            # \"11-5, 11-9, 12-10 ...\"\n",
+    "            pat = r\"(?P<points>[\\d, -]+\\d)(?: \\((?P<time>\\d+)m\\))?\"\n",
+    "            match = re.match(pat, result)\n",
+    "            points = match.group('points')\n",
+    "            w, l = determine_game_score_from_points(points)\n",
+    "            \n",
+    "            games_winner.append(w)\n",
+    "            games_loser.append(l)\n",
+    "        \n",
+    "        else:\n",
+    "            # if functions created properly, this should never run\n",
+    "            print(result)\n",
+    "            print(result_type)\n",
+    "\n",
+    "    df_copy['games_winner'] = games_winner\n",
+    "    df_copy['games_loser'] = games_loser\n",
+    "    \n",
+    "    return df_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5207fae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches_new = process_results_column(matches)\n",
+    "matches_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e6f8fe1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
