--- a/notebooks/01-la-eda.ipynb
+++ b/notebooks/01-la-eda.ipynb
@@ -150,7 +150,7 @@
    "id": "9824e007",
    "metadata": {},
    "source": [
-    "### result, extracting information from results column\n",
+    "### `result`, extracting information from results column\n",
     "\n",
     "The next few functions took several iterations and experimentation to create. I did not record the process by which I incrementally improved the function."
    ]
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9541b336",
+   "id": "1fb14cca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c46a2ae",
+   "id": "65e39fb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8a2794e",
+   "id": "3aabdc25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,18 +338,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5207fae0",
+   "id": "8a2ca3e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "matches_new = process_results_column(matches)\n",
-    "matches_new"
+    "matches = process_results_column(matches)\n",
+    "matches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42997a5b",
+   "metadata": {},
+   "source": [
+    "## `players`, extracting information"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e6f8fe1",
+   "id": "1aaa2a3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _, row in matches.iterrows():\n",
+    "    if \"bt\" not in row.players and row.result != \"bye\":\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55aa9917",
+   "metadata": {},
+   "source": [
+    "Based on above, want to drop the entries which are bye or these other outlier events. All other entries will have 'bt' in players, so there was a winner and a loser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb98e359",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove entries in which there was no winner or loser\n",
+    "bad_results = [\"bye\", \"No shows\", \"Final not played due to unsafe court conditions\"]\n",
+    "indices = ~matches.result.isin(bad_results)\n",
+    "matches = matches[indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e81c324",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check that all entries of players have 'bt'\n",
+    "for _, row in matches.iterrows():\n",
+    "    if \"bt\" not in row.players:\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50d15686",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_players_to_winner_loser(df):\n",
+    "    \"\"\"\n",
+    "    Split players column in raw data into winner and loser.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "        dataframe containing a column 'players' where all\n",
+    "        entries are strings of the form '{winner} bt {loser}'\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    pd.DataFrame\n",
+    "        New dataframe that is copy of the original but with two\n",
+    "        additional columns, one for winner info and one for loser\n",
+    "        info\n",
+    "    \"\"\"\n",
+    "    df_new = df.copy()\n",
+    "\n",
+    "    players = df_new.players.str.split(pat=\" bt \")\n",
+    "    df_new[\"winner\"] = players.map(lambda x: x[0])\n",
+    "    df_new[\"loser\"] = players.map(lambda x: x[1])\n",
+    "    return df_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f51a1652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = split_players_to_winner_loser(matches)\n",
+    "matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dead0650",
    "metadata": {},
    "outputs": [],
    "source": []
