finish processing, and save the processed data

--- a/notebooks/01-la-eda.ipynb
+++ b/notebooks/01-la-eda.ipynb
@@ -27,7 +27,10 @@
     "\n",
     "* tournaments_male.csv. Decided this is not useful so did nothing with this\n",
     "* matches_male.csv.\n",
-    "    * Dropped the columns `tournament_index` and `round`"
+    "    * Dropped the columns `tournament_index` and `round`\n",
+    "    * Categorized the `result` column and extracted the score in games from this\n",
+    "    * Dropped all entries in which the result is 'bye' or one of two outlier matches\n",
+    "    * Extracted winners' and losers' names, countries and seeds"
    ]
   },
   {
@@ -158,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fb14cca",
+   "id": "aed150d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65e39fb0",
+   "id": "1038ae44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aabdc25",
+   "id": "1727d24a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a2ca3e4",
+   "id": "8c0ee3d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42997a5b",
+   "id": "b8054557",
    "metadata": {},
    "source": [
     "## `players`, extracting information"
@@ -357,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aaa2a3a",
+   "id": "8f26184b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55aa9917",
+   "id": "59de38e1",
    "metadata": {},
    "source": [
     "Based on above, want to drop the entries which are bye or these other outlier events. All other entries will have 'bt' in players, so there was a winner and a loser"
@@ -377,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb98e359",
+   "id": "e7d784a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e81c324",
+   "id": "b05dff1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d15686",
+   "id": "2782a5d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f51a1652",
+   "id": "12a23ec5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,10 +449,128 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dead0650",
+   "id": "3e7b0707",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse_player_entry(player: str) -> (str, str, str):\n",
+    "    \"\"\"\n",
+    "    Extract player name, country and seed from player entry.\n",
+    "    \n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    player: str\n",
+    "        String of the form '[9/16] Amaad Fareed (PAK)'\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    (str, str, str)\n",
+    "        player's name, player's country, player's seed\n",
+    "    \"\"\"\n",
+    "    pat_seed = r\"(\\[(?P<seed>\\S+)\\] )?\"\n",
+    "    pat_name = r\"(?P<name>(?:\\w+[ '-])+\\w+)\"\n",
+    "    pat_bracketed_info = r\"(?: \\(\\w+\\))?\"\n",
+    "    pat_country = r\" \\((?P<country>[A-Z]{3,3})\\)\"\n",
+    "    pat = pat_seed+pat_name+pat_bracketed_info+pat_country\n",
+    "    \n",
+    "    match = re.search(pat, player)\n",
+    "    \n",
+    "    try:\n",
+    "        seed = match.group('seed')\n",
+    "        name = match.group('name')\n",
+    "        country = match.group('country')\n",
+    "        return (name, country, seed)\n",
+    "    except:\n",
+    "        print(player)\n",
+    "        return (np.nan, np.nan, np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "237f91d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_player_info(df, column: str) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Split the winner or loser column into seed, name and country.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df: pd.DataFrame\n",
+    "        dataframe with winner or loser column, as extracted\n",
+    "        from the function `split_players_to_winner_loser`\n",
+    "    columns: str\n",
+    "        either 'winner' or 'loser'\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    pd.DataFrame\n",
+    "        new dataframe with three additional columns:\n",
+    "        * {column}_name\n",
+    "        * {column}_country\n",
+    "        * {column}_seed\n",
+    "    \"\"\"\n",
+    "    df_copy = df.copy()\n",
+    "    player_info = df_copy[column].to_list()\n",
+    "    names = []\n",
+    "    countries = []\n",
+    "    seeds = []\n",
+    "    \n",
+    "    for player in player_info:\n",
+    "        name, country, seed = parse_player_entry(player)\n",
+    "        names.append(name)\n",
+    "        countries.append(country)\n",
+    "        seeds.append(seed)\n",
+    "    \n",
+    "    df_copy[f\"{column}_name\"] = names\n",
+    "    df_copy[f\"{column}_country\"] = countries\n",
+    "    df_copy[f\"{column}_seed\"] = seeds\n",
+    "    \n",
+    "    return df_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccfda458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = split_player_info(matches, 'loser')\n",
+    "matches = split_player_info(matches, 'winner')\n",
+    "matches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb7dc289",
+   "metadata": {},
+   "source": [
+    "## Save the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08482eab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches.to_csv(dir_processed+\"matches.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c26af99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv(dir_processed+\"matches.csv\", index_col=0)\n",
+    "test"
+   ]
   }
  ],
  "metadata": {
