calculate expected score

--- a/notebooks/02-la-analysis.ipynb
+++ b/notebooks/02-la-analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9308b224",
+   "id": "2ea2fbd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a20a8eac",
+   "id": "fb971005",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dir_processed = \"../data/processed\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba2ca4f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = pd.read_csv(dir_processed+\"matches.csv\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5414790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "926a9bb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_expected_score(\n",
+    "    rating1: float,\n",
+    "    rating2: float\n",
+    ") -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the expected score using ELO rating system\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    rating1, rating2: float\n",
+    "        ELO ratings of two players\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    float\n",
+    "        The expected score of a player with rating1 against\n",
+    "        a player with rating2 using the ELO rating system\n",
+    "    \"\"\"\n",
+    "    return 1 / (1 + 10**((rating2 - rating1) / 400))\n",
+    "\n",
+    "# list the expected scores for various differences in ratings\n",
+    "for delta in range(0, 501, 20):\n",
+    "    print(f'Difference in rating: {delta:3}.' +\n",
+    "          f'Expected score: {calculate_expected_score(delta, 0)}')"
+   ]
   }
  ],
  "metadata": {
