function to calculate new ratings

--- a/notebooks/02-la-analysis.ipynb
+++ b/notebooks/02-la-analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ea2fbd0",
+   "id": "5e01e4c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb971005",
+   "id": "f36d35fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba2ca4f6",
+   "id": "05ecf32d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5414790",
+   "id": "c600335b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "926a9bb6",
+   "id": "cec51b2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,13 +67,77 @@
     "        The expected score of a player with rating1 against\n",
     "        a player with rating2 using the ELO rating system\n",
     "    \"\"\"\n",
-    "    return 1 / (1 + 10**((rating2 - rating1) / 400))\n",
-    "\n",
-    "# list the expected scores for various differences in ratings\n",
-    "for delta in range(0, 501, 20):\n",
-    "    print(f'Difference in rating: {delta:3}.' +\n",
-    "          f'Expected score: {calculate_expected_score(delta, 0)}')"
+    "    return 1 / (1 + 10**((rating2 - rating1) / 400))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "852d4f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_new_ratings(\n",
+    "    rating_winner: float,\n",
+    "    rating_loser: float,\n",
+    "    expected_score: float,\n",
+    "    K: float = 32,\n",
+    ") -> (float, float):\n",
+    "    \"\"\"\n",
+    "    Calculate new elo ratings.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    rating_winner, rating_loser: float\n",
+    "        ELO ratings of the winner and loser, respectively.\n",
+    "    expected_score: float in range [0, 1]\n",
+    "        The expected score of the winner of the match.\n",
+    "    K: float, default 32\n",
+    "        Constant that determines how much the ratings are adjusted.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    new_rating_winner, new_rating_loser\n",
+    "        New ELO ratings\n",
+    "    \"\"\"\n",
+    "    delta_rating = K * (1 - expected_score)\n",
+    "\n",
+    "    new_rating_winner = rating_winner + delta_rating\n",
+    "    new_rating_loser = rating_loser - delta_rating\n",
+    "\n",
+    "    return new_rating_winner, new_rating_loser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55030749",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# manually test the above functions\n",
+    "\n",
+    "for delta in range(-500, 501, 50):\n",
+    "    expected_score = calculate_expected_score(delta, 0)\n",
+    "    new_rating_winner, new_rating_loser = calculate_new_ratings(\n",
+    "        delta, 0, expected_score\n",
+    "    )\n",
+    "    \n",
+    "    print(f'Old winner rating: {delta:3}.')\n",
+    "    print(f'Old loser rating: 0')\n",
+    "    print(f'Expected score: {expected_score}')\n",
+    "    print(f'New winner rating: {new_rating_winner}')\n",
+    "    print(f'New loser rating: {new_rating_loser}')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "666993ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
