reverse order of matches, make it chronological

--- a/notebooks/01-la-processing.ipynb
+++ b/notebooks/01-la-processing.ipynb
@@ -545,6 +545,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "618edaac",
+   "metadata": {},
+   "source": [
+    "## Reorder so it is chronological"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9a89a07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = matches[::-1].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb7dc289",
    "metadata": {},
    "source": [
