define all remaining functions

--- a/notebooks/02-la-analysis.ipynb
+++ b/notebooks/02-la-analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8df2b7",
+   "id": "a72ce745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32ceffd",
+   "id": "a74e5199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f85d862f",
+   "id": "238fe97a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f3fac1",
+   "id": "b5c72bcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3331c0b0",
+   "id": "e84ce4f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88f1345b",
+   "id": "c4a8ac0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0047cfcf",
+   "id": "13d9d840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,25 +134,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c029bb2",
+   "id": "c5f90394",
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_ratings(player_ratings, winner_name, loser_name):\n",
     "    \"\"\"\n",
     "    Update ratings based on a single new result.\n",
-    "    \n",
+    "\n",
     "    If winner or loser is not already in the player_ratings\n",
     "    dictionary, then a fresh entry with a rating of 1500 is\n",
     "    created.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    player_ratings: Dict[str, float]\n",
     "        dictionary of player ratings\n",
     "    winner_name, loser_name: str,\n",
     "        name of winner and loser\n",
-    "    \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    player_ratings\n",
@@ -161,62 +161,239 @@
     "    rating_winner_new\n",
     "    rating_loser_old\n",
     "    rating_loser_new\n",
-    "    expected_score\n",
-    "    \"\"\""
+    "    predicted_score\n",
+    "    \"\"\"\n",
+    "    if winner_name not in player_ratings:\n",
+    "        player_ratings[winner_name] = 1500\n",
+    "    rating_winner_old = player_ratings[winner_name]\n",
+    "\n",
+    "    if loser_name not in player_ratings:\n",
+    "        player_ratings[loser_name] = 1500\n",
+    "    rating_loser_old = player_ratings[loser_name]\n",
+    "\n",
+    "    predicted_score = calculate_predicted_score(rating_winner_old, rating_loser_old)\n",
+    "\n",
+    "    rating_winner_new, rating_loser_new = calculate_new_ratings(\n",
+    "        rating_winner_old, rating_loser_old, predicted_score\n",
+    "    )\n",
+    "    \n",
+    "    player_ratings[winner_name] = rating_winner_new\n",
+    "    player_ratings[loser_name] = rating_loser_new\n",
+    "\n",
+    "    return (\n",
+    "        player_ratings,\n",
+    "        rating_winner_old,\n",
+    "        rating_winner_new,\n",
+    "        rating_loser_old,\n",
+    "        rating_loser_new,\n",
+    "        predicted_score,\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b88f7731",
+   "id": "33befe7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_elo(matches: pd.DataFrame) -> pd.DataFrame:\n",
+    "# manually test update_ratings\n",
+    "\n",
+    "test_ratings = {'a': 1000, 'b': 900}\n",
+    "\n",
+    "test_ratings, _, _, _, _, _ = update_ratings(test_ratings, 'a', 'b')\n",
+    "test_ratings, _, _, _, _, _ = update_ratings(test_ratings, 'c', 'd')\n",
+    "test_ratings, _, _, _, _, _ = update_ratings(test_ratings, 'd', 'c')\n",
+    "\n",
+    "test_ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d06bbfd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_elo(matches: pd.DataFrame, player_ratings={}) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Calculate elo ratings for all players and match history from\n",
     "    the matches input.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    matches: pd.DataFrame\n",
     "        dataframe of match history\n",
-    "    \n",
+    "    player_ratings: Dict[str, float]\n",
+    "        dictionary of players' elo ratings\n",
+    "\n",
     "    Returns\n",
     "    -------\n",
+    "    player_ratings: Dict[str, float]\n",
+    "        updated player_ratings\n",
     "    pd.DataFrame\n",
     "        copy of matches dataframe with new columns for:\n",
     "        * rating_winner_old\n",
     "        * rating_winner_new\n",
     "        * rating_loser_old\n",
     "        * rating_loser_new\n",
-    "        * expected_score\n",
-    "    \"\"\""
+    "        * predicted_score\n",
+    "    \"\"\"\n",
+    "    ratings_winner_old = []\n",
+    "    ratings_winner_new = []\n",
+    "    ratings_loser_old = []\n",
+    "    ratings_loser_new = []\n",
+    "    predicted_scores = []\n",
+    "\n",
+    "    df = matches.copy()\n",
+    "\n",
+    "    for _, row in tqdm(df.iterrows()):\n",
+    "        winner_name = row.winner_name\n",
+    "        loser_name = row.loser_name\n",
+    "\n",
+    "        (\n",
+    "            player_ratings,\n",
+    "            rating_winner_old,\n",
+    "            rating_winner_new,\n",
+    "            rating_loser_old,\n",
+    "            rating_loser_new,\n",
+    "            predicted_score,\n",
+    "        ) = update_ratings(player_ratings, winner_name, loser_name)\n",
+    "        \n",
+    "        ratings_winner_old.append(rating_winner_old)\n",
+    "        ratings_winner_new.append(rating_winner_new)\n",
+    "        ratings_loser_old.append(rating_loser_old)\n",
+    "        ratings_loser_new.append(rating_loser_new)\n",
+    "        predicted_scores.append(predicted_score)\n",
+    "    \n",
+    "    df['rating_winner_old'] = ratings_winner_old\n",
+    "    df['rating_winner_new'] = ratings_winner_new\n",
+    "    df['rating_loser_old'] = ratings_loser_old\n",
+    "    df['rating_loser_new'] = ratings_loser_new\n",
+    "    df['predicted_score'] = predicted_scores\n",
+    "    \n",
+    "    return player_ratings, df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9f79d4e",
+   "id": "e1b05073",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_calibration(df_input: pd.DataFrame) -> pd.Series:\n",
+    "player_ratings, matches = calculate_elo(matches)\n",
+    "matches.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a77065a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def view_player_history(df: pd.DataFrame, player: str) -> None:\n",
     "    \"\"\"\n",
-    "    Evaluate how well calibrated the ELO ratings are.\n",
+    "    View all results of a player.\n",
+    "    \n",
+    "    Prints the following for all games that player played in:\n",
+    "    * name of winner\n",
+    "    * name of loser\n",
+    "    * winners elo rating (before the match)\n",
+    "    * losers elo rating (before the match)\n",
+    "    * winners seed in the tournament\n",
+    "    * losers seed in the tournament\n",
+    "    * predicted score from elo ratings for the match\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
-    "    df_input\n",
-    "        dataframe as outputted by calculate_elo\n",
+    "    df\n",
+    "        dataframe of matches as outputted by calculate_elo\n",
+    "    player: str\n",
+    "        name of the player\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
+    "    None\n",
+    "    \"\"\"\n",
+    "    indices = (df.winner_name == player) | (df.loser_name == player)\n",
+    "    df_player = df[indices]\n",
+    "    \n",
+    "    for _,row in df_player.iterrows():\n",
+    "        w = row.winner_name\n",
+    "        wr = row.rating_winner_old\n",
+    "        ws = row.winner_seed\n",
+    "        l = row.loser_name\n",
+    "        lr = row.rating_loser_old\n",
+    "        ls = row.loser_seed\n",
+    "        pred = row.predicted_score\n",
+    "        print(f'{w[0:10]:10} beat {l[0:10]:10} {wr:.0f} vs {lr:.0f}   {ws:3} vs {ls:3}   {pred:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd50e44c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view_player_history(df, 'Ramy Ashour')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b6fc014",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_calibration(df_input: pd.DataFrame, N: int = 2) -> pd.Series:\n",
+    "    \"\"\"\n",
+    "    Evaluate how well calibrated the ELO ratings are.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df_input\n",
+    "        Dataframe as outputted by calculate_elo\n",
+    "    N: int\n",
+    "        Number of times each bucket of size 0.1 is broken up.\n",
+    "        See the index of the returned pd.Series for an example\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
     "    pd.Series\n",
-    "        * index are buckets [0.5-0.6, 0.6-0.7,..., 0.9-1.0]\n",
+    "        * index is predicted score, rounded to nearest 0.1/N. For\n",
+    "          example, if N=2, then rounded to nearest 0.05, so index is\n",
+    "          0.5, 0.55, 0.6,...,0.95, 1\n",
     "        * values are the average true score of matches whose predicted\n",
     "        score is in that bucket\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    df = df_input.copy()\n",
+    "\n",
+    "    df[\"predicted_score_better_player\"] = df.predicted_score.apply(\n",
+    "        lambda x: round(N * x, 1) / N if x > 0.5 else 1 - round(N * x, 1) / N\n",
+    "    )\n",
+    "\n",
+    "    df[\"true_score_better_player\"] = df.predicted_score.apply(\n",
+    "        lambda x: 1 if x > 0.5 else 0\n",
+    "    )\n",
+    "\n",
+    "    return (\n",
+    "        df\n",
+    "        .groupby(\"predicted_score_better_player\")\n",
+    "        .agg({\"true_score_better_player\": [\"count\", \"mean\"]})\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b7a732a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_calibration(df)"
    ]
   }
  ],
