--- a/notebooks/01-la-processing.ipynb
+++ b/notebooks/01-la-processing.ipynb
@@ -9,8 +9,9 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "%config InlineBackend.figure_format = \"retina\"\n",
     "\n",
     "import os\n",
     "import re\n",
@@ -25,12 +26,20 @@
     "# Summary\n",
     "In this notebook I carry out EDA, cleaning and processing of data.\n",
     "\n",
+    "\n",
+    "Cleaning and processing:\n",
+    "\n",
     "* tournaments_male.csv. Decided this is not useful so did nothing with this\n",
     "* matches_male.csv.\n",
     "    * Dropped the columns `tournament_index` and `round`\n",
     "    * Categorized the `result` column and extracted the score in games from this\n",
     "    * Dropped all entries in which the result is 'bye' or one of two outlier matches\n",
-    "    * Extracted winners' and losers' names, countries and seeds"
+    "    * Extracted winners' and losers' names, countries and seeds from `player column`\n",
+    "\n",
+    "EDA\n",
+    "\n",
+    "* Found some dirty data by looking at the (new) columns `games_winner` and `games_loser`. For the purposes of this project, I left them in as I all I need to know is who won or lost.\n",
+    "* "
    ]
   },
   {
@@ -559,6 +568,269 @@
    "outputs": [],
    "source": [
     "matches = matches[::-1].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbf6da75",
+   "metadata": {},
+   "source": [
+    "## EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2885da53",
+   "metadata": {},
+   "source": [
+    "#### Explore games score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87cbfb1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches.groupby(['games_winner', 'games_loser']).size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab4c89d0",
+   "metadata": {},
+   "source": [
+    "We see that there is some dirty data here. Lets explore and find out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4394cea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indices_1 = matches.games_winner == 1\n",
+    "indices_2 = (matches.games_winner == 2) & (matches.games_loser >= 2)\n",
+    "indices_4 = matches.games_winner == 4\n",
+    "\n",
+    "indices = indices_1 | indices_2 | indices_4\n",
+    "\n",
+    "matches[indices]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0c74bd5",
+   "metadata": {},
+   "source": [
+    "It looks like the majority of them must be data entry mistakes. E.g. the first entry here shows scores of 1-9, 9-1, 10-8, 9-5, 9-0, so a game score of 4-1. It is likely that one of the points scores were entered the wrong way around and the correct score should be 3-2.\n",
+    "\n",
+    "For ELO, you only need to know who won or lost the match, so I will keep these entries unchanged. However, if I want to make use of game scores, then I would have to manually change these to make them sensible or remove them.\n",
+    "\n",
+    "Given that they are a small percentage of all matches, whatever one does with these (manually change or delete) will have little impact on the final performance of the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29661b0d",
+   "metadata": {},
+   "source": [
+    "#### Explore loser_name and winner_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "360ff216",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "losses = matches.loser_name.value_counts()\n",
+    "losses.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b03be22a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wins = matches.winner_name.value_counts()\n",
+    "wins.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e349c5fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_record = pd.merge(\n",
+    "    left=losses, right=wins, left_index=True, right_index=True, how=\"outer\"\n",
+    ").fillna(value=0)\n",
+    "\n",
+    "player_record.columns = [\"losses\", \"wins\"]\n",
+    "\n",
+    "player_record.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a29b27ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_record[\"total\"] = player_record.losses + player_record.wins\n",
+    "player_record[\"wins_percentage\"] = (\n",
+    "    100 * player_record.wins / player_record.total\n",
+    ").round(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73d74c86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_record[player_record.total > 20].sort_values(\n",
+    "    by=[\"wins_percentage\", \"total\"], ascending=False\n",
+    ").head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b87f3e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "sns.histplot(player_record[player_record.total > 20].wins_percentage)\n",
+    "plt.title(\"Distribution of players' percentage of matches won\")\n",
+    "ax.set_xlabel('Percentage of matches won')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55b507df",
+   "metadata": {},
+   "source": [
+    "#### Explore loser_seed and winner_seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "842d9f4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches.groupby(['winner_seed', 'loser_seed']).size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "752fbe66",
+   "metadata": {},
+   "source": [
+    "There are too many entries to be useful. I will instead search for particular examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d6310c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_summaries_by_seed(seeds, null=False):\n",
+    "    \"\"\"\n",
+    "    Calculate summary stats for a list/set of seeds.\n",
+    "    \"\"\"\n",
+    "    indices = matches.winner_seed.isin(seeds) & matches.loser_seed.isin(seeds)\n",
+    "    \n",
+    "    if null:\n",
+    "        null_loss = matches.winner_seed.isin(seeds) & matches.loser_seed.isnull()\n",
+    "        null_win = matches.winner_seed.isnull() & matches.loser_seed.isin(seeds)\n",
+    "        indices = indices | null_loss | null_win\n",
+    "    \n",
+    "    return matches[indices].groupby(['winner_seed', 'loser_seed'], dropna=False).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c9617ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculate_summaries_by_seed(['1','2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d593940d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "466/(466+243)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "315f33af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculate_summaries_by_seed(['1', '2','3', '4'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fad99fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculate_summaries_by_seed(['1'], null=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48df2af3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2095/(2095+234)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a51c85af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculate_summaries_by_seed(['2'], null=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce1b642a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1900/(1900+293)"
    ]
   },
   {
